test/classes/errors/nilability-assign/assign-oknil-shared-from-nonnil-unmanaged.good
assign-oknil-shared-from-nonnil-unmanaged.chpl:8: error: Cannot assign to shared MyClass? from unmanaged MyClass
